--- a/assets/css/legacy.css
+++ b/assets/css/legacy.css
@@ -53,11 +53,13 @@
 }
 
 .navbar-brand img {
-  height: 60px;
+  height: 55px;
   width: auto;
+  max-height: 55px;
   transition: height var(--transition-base);
   padding: 0;
   margin: 0;
+  object-fit: contain;
 }
 
 .navbar-collapse {
