--- a/assets/partials/footer.html
+++ b/assets/partials/footer.html
@@ -6,11 +6,11 @@
                 <div class="row">
                     <div class="col-4 footer-accordion-column">
                         <h5>Bloom'n</h5>
-                        <button class="footer-accordion-button" type="button" aria-expanded="false" aria-controls="footer-accordion-bloomn">
+                        <button class="footer-accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#footer-accordion-bloomn" aria-expanded="false" aria-controls="footer-accordion-bloomn">
                             <span>Bloom'n</span>
                             <i class="bi bi-chevron-down footer-accordion-chevron" aria-hidden="true"></i>
                         </button>
-                        <div class="footer-accordion-content" id="footer-accordion-bloomn">
+                        <div class="footer-accordion-content collapse" id="footer-accordion-bloomn" data-bs-parent=".footer-accordion-column">
                             <ul class="nav d-flex flex-column row-gap-0">
                                 <li class="nav-item"><a class="nav-link text-light" href="index.html">Home</a></li>
                                 <li class="nav-item"><a class="nav-link text-light" href="about.html">About Us</a></li>
@@ -21,11 +21,11 @@
                     </div>
                     <div class="col-4 footer-accordion-column">
                         <h5>Portfolio</h5>
-                        <button class="footer-accordion-button" type="button" aria-expanded="false" aria-controls="footer-accordion-portfolio">
+                        <button class="footer-accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#footer-accordion-portfolio" aria-expanded="false" aria-controls="footer-accordion-portfolio">
                             <span>Portfolio</span>
                             <i class="bi bi-chevron-down footer-accordion-chevron" aria-hidden="true"></i>
                         </button>
-                        <div class="footer-accordion-content" id="footer-accordion-portfolio">
+                        <div class="footer-accordion-content collapse" id="footer-accordion-portfolio" data-bs-parent=".footer-accordion-column">
                             <ul class="nav d-flex flex-column row-gap-0">
                                 <li class="nav-item"><a class="nav-link text-light" href="events.html">Events</a></li>
                                 <li class="nav-item"><a class="nav-link text-light" href="workshops.html">Workshops</a></li>
@@ -36,11 +36,11 @@
                     </div>
                     <div class="col-4 footer-accordion-column">
                         <h5>Success Stories</h5>
-                        <button class="footer-accordion-button" type="button" aria-expanded="false" aria-controls="footer-accordion-success">
+                        <button class="footer-accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#footer-accordion-success" aria-expanded="false" aria-controls="footer-accordion-success">
                             <span>Success Stories</span>
                             <i class="bi bi-chevron-down footer-accordion-chevron" aria-hidden="true"></i>
                         </button>
-                        <div class="footer-accordion-content" id="footer-accordion-success">
+                        <div class="footer-accordion-content collapse" id="footer-accordion-success" data-bs-parent=".footer-accordion-column">
                             <ul class="nav d-flex flex-column row-gap-0">
                                 <li class="nav-item"><a class="nav-link text-light" href="case-study-centuria-connect140.html">Connect 140</a></li>
                                 <li class="nav-item"><a class="nav-link text-light" href="case-study-hawaiian-forrestfield.html">A World of Flavours</a></li>
